2006-08-15  Tim Omernick  <timo@apple.com>

        Reviewed by Darin Adler.

        <http://bugzilla.opendarwin.org/show_bug.cgi?id=8980>
        ASSERTION FAILED: !isLoaded (WebKit/WebKit/Plugins/WebBasePluginPackage.m:228 -[WebBasePluginPackage dealloc])

        <rdar://problem/4526052> intermittent assertion failure in -[WebBasePluginPackage dealloc] running layout tests (8980)
        
        * Plugins/WebPluginDatabase.h:
        * Plugins/WebPluginDatabase.m:
        (+[WebPluginDatabase installedPlugins]):
        Observe NSApplicationWillTerminateNotification so we can unload plug-ins on quit.
        (-[WebPluginDatabase plugins]):
        'plugins' is now a dictionary.
        (-[WebPluginDatabase close]):
        Call new -_removePlugin: method.
        (-[WebPluginDatabase refresh]):
        Moved parts of this method out into other methods: -_addPlugin:, -_removePlugin:, and -_scanForNewPlugins.
        (-[WebPluginDatabase _plugInPaths]):
        No changes; just moved in file.
        (-[WebPluginDatabase _addPlugin:]):
        New method.  Refactored from -refresh.  Adds a plug-in to the database.
        (-[WebPluginDatabase _removePlugin:]):
        New method.  Refactored from -refresh.  Remove a plug-in from the database.
        (-[WebPluginDatabase _scanForNewPlugins]):
        New method.  Refactored from -refresh.  Returns the list of plug-in packages on disk.
        (-[WebPluginDatabase _applicationWillTerminate]):
        New method.  Called when the application terminates.  Closes the plug-in database so that all plug-ins are
        removed from the DB (and unloaded if necessary).

        * Plugins/WebBasePluginPackage.h:
        * Plugins/WebBasePluginPackage.m:
        (-[WebBasePluginPackage initWithPath:]):
        Try to create the NSBundle first, so if the file is not a valid bundle we bail out early.  This
        avoids some stat()s and allocations during the plug-in refresh process.